--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,6 +1,69 @@
-.cardstyle{
-    width: 30%;
-    margin-right: 3%;
-    margin-bottom: 3%;
+.container{
+    margin-top: 3%;
+    padding-left: 2%;
+    border: solid 0.6px black;
+    border-radius: 1.5rem;
+}
+
+#head{
+    margin-top: 4%;
+    text-align: center;
+}
+
+#sector{
+    color: red;
+    font-weight: bold;
+    margin-bottom: 0;
+}
+
+#name{
+    margin-top: 0;
+}
+
+.news{
+    transition: box-shadow .3s;
+    border: solid 0.6px black;
+    padding: 3%;
+    margin-bottom: 2%;
+}
+
+.link{
+    color: black;
+    text-decoration: none;
+    display: block;
+    width: 98%;
+}
+
+.news:hover {
+    box-shadow: 0 0 11px rgba(33,33,33,.2); 
+}
+
+.row:after {
+    clear: left;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    content: '';
+}
+
+.column {
     float: left;
+    width: 20%;
+    display: block;
+    position: relative;
+    text-align: center;
+}
+
+.peerBox {
+    cursor: pointer;
+    transition: box-shadow .3s;
+    border: solid 0.6px black;
+    margin-left: 15%;
+    margin-right: 15%;
+    height: 4rem;
+    margin-bottom: 10%;
+}
+
+.peerBox:hover {
+    box-shadow: 0 0 11px rgba(33,33,33,.2); 
 }
